<resources>
    <string name="app_name">Calculadora de Tiempo</string>
    <string name="from_date">Fecha Inicio</string>
    <string name="to_date">Fecha Fin</string>
    <string name="today_button">Hoy!</string>
    <string name="time_elapsed_label">Tiempo Transcurrido:</string>
    <string name="elapsed_days_label">Dias Transcurridos:</string>

    <string name="initial_date_button">Fecha Inicio</string>
    <string name="end_date_button">Fecha Fin</string>
    <string name="endate_after_initialdate_validation">La Fecha Fin debe estar despues de la fecha de inicio</string>
</resources>
